--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <header>
     <section id="header">
         <nav class ="navbar navbar-dark">
-            <a class="header1" href="home.html"><strong><img class="img-small" src="images/logo.png"></strong></a>
+            <a class="header1" href="home.html"><strong><img class="img-small" src="./images/logo.png"></strong></a>
             <button class ="navbar-toggler ml-auto" type ="button" data-toggle ="collapse" data-target ="#colNav">
             <span class ="navbar-toggler-icon"></span>
             </button>
@@ -53,7 +53,7 @@
 
     <section id="body">
         <div class="main">
-            <p class="hello"><strong>Hello there!</strong><img class="titleimg" src="https://camo.githubusercontent.com/5ddf73ad3a205111cf8c686f687fc216c2946a75005718c8da5b837ad9de78c9/68747470733a2f2f7468756d62732e6766796361742e636f6d2f4576696c4e657874446576696c666973682d736d616c6c2e676966"></p>
+            <p class="hello"><strong>Hello there!</strong><img class="titleimg" src="https://media.tenor.com/M0S6_P7ZMMgAAAAM/bugs-video-games.gif"></p>
             <h1 class="name"><strong>I'm Manas.</strong></h1>
             <h1 class="web-d">A full-stack Web Developer.</h1>
             <p class="intro"><strong><br>I'm a student pursuing b.tech in computer science engineering. I am<br>specialized in building websites and currently focusing on practising <br> my skills and improving them.</strong></p>
