--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section id="body">
         <div class="main">
-            <p class="hello"><strong>Hello there!</strong><img class="titleimg" src="https://media.tenor.com/M0S6_P7ZMMgAAAAM/bugs-video-games.gif"></p>
+            <p class="hello"><strong>Hello there!</strong><img class="titleimg" src="https://img.etimg.com/thumb/width-1200,height-900,imgsize-638053,resizemode-75,msid-84146083/prime/technology-and-startups/booting-up-developer-economy-how-tech-startups-are-helping-coders-build-and-test-software-faster.jpg"></p>
             <h1 class="name"><strong>I'm Manas.</strong></h1>
             <h1 class="web-d">A full-stack Web Developer.</h1>
             <p class="intro"><strong><br>I'm a student pursuing b.tech in computer science engineering. I am<br>specialized in building websites and currently focusing on practising <br> my skills and improving them.</strong></p>
